[tool.poetry]
name = "clib"
version = "0.10.0"
description = "Python CLI library, tools and scripts to help in everyday life"
authors = ["W. Augusto Andreoli <andreoliwa@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/andreoliwa/python-clib"
keywords = ["python3", "cli"]
# Trove classifiers
# Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3 :: Only",
]

# TODO This is still not working properly; the scripts are created but not added to the PATH. Temporary workaround:
# Every time the scripts below change, run:
# poetryx setup-py
[tool.poetry.scripts]
backup-full = "clib.files:backup_full"
docker-find = "clib.docker:docker_find"
docker-volume = "clib.docker:docker_volume"
pycharm-cli = "clib.dev:pycharm_cli"
pypub = "clib.dev.packaging:pypub"
poetryx = "clib.dev.packaging:poetryx"
postgresx = "clib.db:postgresx"
pytestx = "clib.dev:pytestx"

[tool.poetry.dependencies]
python = "^3.7"
argcomplete = "*"
click = "*"
colorlog = "*"
requests = "*"
SQLAlchemy = "*"
plumbum = "*"
prettyconf = "*"
requests-html = "*"

[tool.poetry.dev-dependencies]
coverage = "*"
docutils = "*"
pytest-cov = "*"
pytest = "*"
Sphinx = "*"
tox = "*"
ipython = "*"
ipdb = "*"
pylint = "*"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
