[tool.poetry]
name = "clib"
version = "0.10.0"
description = "Python CLI library, tools and scripts to help in everyday life"
authors = ["W. Augusto Andreoli <andreoliwa@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/andreoliwa/python-clib"
keywords = ["python3", "cli"]
# Trove classifiers
# Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.scripts]
backup-full = "clib.files:backup_full"
docker-find = "clib.docker:docker_find"
docker-volume = "clib.docker:docker_volume"
postgresx = "clib.db:postgresx"
pypub = "clib.dev.packaging:pypub"
pytestx = "clib.dev:pytestx"
rm-broken-symlinks = "clib.files:rm_broken_symlinks"
rename-slugify = "clib.rename:rename_slugify"
contacts = "clib.contacts:contacts"
merge-dirs = "clib.rename:merge_dirs"

[tool.poetry.dependencies]
python = "^3.9"
click = "*"
colorlog = "*"
requests = "*"
plumbum = "*"
prettyconf = "*"
requests-html = "*"
pendulum = "*"
python-slugify = "*"
postal = { version = "*", optional = true }
"ruamel.yaml" = "*"
phonenumbers = "*"

[tool.poetry.dependencies.pylint]
optional = true
version = "*"

[tool.poetry.extras]
# Those optional packages are only available on macOS. To install them:
# poetry install --extras macos
macos = ["postal"]
lint = ["pylint"]

[tool.poetry.dev-dependencies]
coverage = "*"
docutils = "*"
pytest-cov = "*"
pytest = "*"
Sphinx = "*"
tox = "*"
ipython = "*"
ipdb = "*"
pylint = "*"
testfixtures = "*"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
